--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="./app.js" charset="utf-8" defer></script>
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
@@ -14,4 +15,3 @@
 </body>
 </html>
 
-//
