I added my first element and it was fun

--- a/hogwarts.html
+++ b/hogwarts.html
@@ -11,5 +11,7 @@
     <script type="text/javascript" src="hogwarts.js"></script>
 
     <div id="container"></div>
+    <h2 id="myHeading">Yuna</h2>
+    
 </body>
 </html>
