--- a/hogwarts.html
+++ b/hogwarts.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script
+    src="https://code.jquery.com/jquery-3.2.0.min.js"
+    integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I="
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./hogwarts.css">
+    <script src="./hogwarts.js" defer></script>
     <title>Hogwarts</title>
-    <link rel="stylesheet" href="hogwarts.css">
 </head>
 <body>
-    <script type="text/javascript" src="hogwarts.js"></script>
+    
 
     <div id="container"></div>
-    <h2 id="myHeading">Yuna</h2>
+
     
 </body>
 </html>
